[package]
name = "dda-voxelize"
version = "0.1.0"
edition = "2021"
description = "Voxelization in Rust with the DDA Algorithm"
authors = ["nokonoko1203 <nokonoko.1203.777@gmail.com>", "MIERUNE Inc. <info@mierune.co.jp>"]
license = "MIT"
repository = "https://github.com/MIERUNE/dda-voxelize-rs"
categories = ["algorithms", "graphics", "mathematics", "science::geo"]

[dependencies]
glam = "0.27"
hashbrown = "0.14"
log = "0.4.21"

[dev-dependencies]
flatgeom= "0.0"
earcut = "0.4"
byteorder = "1.5"
serde_json = "1.0"
indexmap = "2.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
